# Collocation-in-Rust

./: Cargo.toml
src/: automatic_derivative.rs  boundary_conditions.rs  dual.rs  main.rs  matrix_op.rs  multi_interval_domain.rs  solution.html  solution1.html  test.rs  test_odes.rs
