[package]
name = "collocation_dbp"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
nalgebra = "0.34.2"
num-traits = "0.2.19"
plotly = "0.14.1"
rayon = "1.12.0"
lapack = "0.20"
lapack-src = { version = "0.8", features = ["openblas"] }

[dependencies.openblas-src]
version = "0.10"
features = ["system"]
